--- a/List_Assignment.ipynb
+++ b/List_Assignment.ipynb
@@ -641,7 +641,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the length of the list: 4\n",
+      "Enter the value: 26\n",
+      "Enter the value: 35\n",
+      "Enter the value: 69\n",
+      "Enter the value: 62\n",
+      "[35, 69]\n"
+     ]
+    }
+   ],
+   "source": [
+    "l=[]\n",
+    "p=int(input(\"Enter the length of the list: \"))\n",
+    "for i in range (p):\n",
+    "    l.append(int(input(\"Enter the value: \")))\n",
+    "    \n",
+    "for j in l:\n",
+    "    if j%2==0:\n",
+    "        l.remove(j)\n",
+    "\n",
+    "print(l)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {
     "id": "3BaCb-rB95B7"
    },
@@ -719,6 +751,29 @@
     "l='How much wood would a woodchuck chuck if a woodchuck could chuck wood'\n",
     "f= len(l)\n",
     "f"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p=[78,67,89,54]\n",
+    "for i in p:\n",
+    "    h=p[2]%2\n",
+    "h"
    ]
   },
   {
